[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://微软雅黑.tres" type="DynamicFont" id=2]
[ext_resource path="res://CheckList.gd" type="Script" id=3]
[ext_resource path="res://微软雅黑.ttf" type="DynamicFontData" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/fonts/font = SubResource( 2 )

[node name="Main" type="TabContainer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="设置班级" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 51.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Import" type="Button" parent="设置班级"]
margin_left = 65.0
margin_top = 103.0
margin_right = 310.0
margin_bottom = 187.0
text = "导入"

[node name="StartClassPage" type="Button" parent="设置班级"]
margin_left = 664.0
margin_top = 113.0
margin_right = 847.0
margin_bottom = 187.0
text = "设置班级"

[node name="AdminClassPage" type="WindowDialog" parent="设置班级"]
margin_left = 122.0
margin_top = 36.0
margin_right = 821.0
margin_bottom = 487.0
script = ExtResource( 3 )

[node name="MoreClassSetting" type="ConfirmationDialog" parent="设置班级/AdminClassPage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 126.0
margin_top = 44.0
margin_right = 227.0
margin_bottom = -107.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "请确认..."

[node name="GridContainer" type="GridContainer" parent="设置班级/AdminClassPage/MoreClassSetting"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -142.0
margin_right = -8.0
margin_bottom = 95.0
theme = SubResource( 3 )
columns = 6

[node name="LineEdit" type="LineEdit" parent="设置班级/AdminClassPage/MoreClassSetting"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 245.0
placeholder_text = "于此处输入班级新的名字"

[node name="RenameHint" type="Label" parent="设置班级/AdminClassPage/MoreClassSetting"]
margin_left = 8.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 245.0
align = 2

[node name="AdminStudentPage" type="ConfirmationDialog" parent="设置班级/AdminClassPage/MoreClassSetting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.0
margin_top = -142.0
margin_right = 392.0
margin_bottom = 95.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "请确认..."

[node name="Name" type="LineEdit" parent="设置班级/AdminClassPage/MoreClassSetting/AdminStudentPage"]
margin_left = 8.0
margin_top = 8.0
margin_right = 776.0
margin_bottom = 182.0
clear_button_enabled = true
placeholder_text = "于此处修改学生姓名"
caret_blink = true

[node name="Weight" type="SpinBox" parent="设置班级/AdminClassPage/MoreClassSetting/AdminStudentPage"]
margin_left = 8.0
margin_top = 8.0
margin_right = 776.0
margin_bottom = 182.0
rounded = true
align = 1

[node name="WeightPrefix" type="Label" parent="设置班级/AdminClassPage/MoreClassSetting/AdminStudentPage"]
margin_left = 8.0
margin_top = 8.0
margin_right = 776.0
margin_bottom = 182.0
text = "被 Roll 到的概率:  "
align = 2

[node name="WeightSuffix" type="Label" parent="设置班级/AdminClassPage/MoreClassSetting/AdminStudentPage"]
margin_left = 8.0
margin_top = 8.0
margin_right = 776.0
margin_bottom = 182.0
text = " %"

[node name="FileDialog" type="FileDialog" parent="设置班级"]
margin_right = 426.0
margin_bottom = 206.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "保存文件"

[node name="GetClassName" type="ConfirmationDialog" parent="设置班级"]
margin_left = 105.0
margin_top = 22.0
margin_right = 912.0
margin_bottom = 517.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "请确认..."

[node name="ScrollContainer" type="ScrollContainer" parent="设置班级/GetClassName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 799.0
margin_bottom = 440.0

[node name="VBoxContainer" type="VBoxContainer" parent="设置班级/GetClassName/ScrollContainer"]

[node name="LineEdit" type="LineEdit" parent="设置班级/GetClassName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 799.0
margin_bottom = 440.0
align = 1
max_length = 30
clear_button_enabled = true
placeholder_text = "于此处输入名字"
caret_blink = true

[node name="HintLabel" type="Label" parent="设置班级/GetClassName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 799.0
margin_bottom = 440.0
text = "不能和已有的班级名字重复"
align = 1

[node name="RollClassName" type="Button" parent="设置班级/GetClassName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 799.0
margin_bottom = 440.0
text = "Roll 一个炫酷的名字吧~"

[node name="定时" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="WeekdayList" type="VBoxContainer" parent="定时"]
margin_left = 16.0
margin_top = 143.0
margin_right = 252.0
margin_bottom = 364.0
__meta__ = {
"_edit_group_": true
}

[node name="1" type="CheckBox" parent="定时/WeekdayList"]
margin_right = 236.0
margin_bottom = 41.0
text = "礼拜一"

[node name="2" type="CheckBox" parent="定时/WeekdayList"]
margin_top = 45.0
margin_right = 236.0
margin_bottom = 86.0
text = "礼拜二"

[node name="3" type="CheckBox" parent="定时/WeekdayList"]
margin_top = 90.0
margin_right = 236.0
margin_bottom = 131.0
text = "礼拜三(今天做核酸)"

[node name="4" type="CheckBox" parent="定时/WeekdayList"]
margin_top = 135.0
margin_right = 236.0
margin_bottom = 176.0
text = "______疯狂星期四"

[node name="5" type="CheckBox" parent="定时/WeekdayList"]
margin_top = 180.0
margin_right = 236.0
margin_bottom = 221.0
text = "礼拜五(明天是周末)"

[node name="TimingList" type="VBoxContainer" parent="定时"]
margin_left = 274.0
margin_top = 106.0
margin_right = 463.0
margin_bottom = 597.0
__meta__ = {
"_edit_group_": true
}

[node name="0" type="CheckBox" parent="定时/TimingList"]
margin_right = 189.0
margin_bottom = 41.0
text = "08:00 ~ 08:45"

[node name="1" type="CheckBox" parent="定时/TimingList"]
margin_top = 45.0
margin_right = 189.0
margin_bottom = 86.0
text = "08:55 ~ 09:40"

[node name="2" type="CheckBox" parent="定时/TimingList"]
margin_top = 90.0
margin_right = 189.0
margin_bottom = 131.0
text = "10:10 ~ 10:55"

[node name="3" type="CheckBox" parent="定时/TimingList"]
margin_top = 135.0
margin_right = 189.0
margin_bottom = 176.0
text = "11:05 ~ 11:50"

[node name="4" type="CheckBox" parent="定时/TimingList"]
margin_top = 180.0
margin_right = 189.0
margin_bottom = 221.0
text = "14:30 ~ 15:15"

[node name="5" type="CheckBox" parent="定时/TimingList"]
margin_top = 225.0
margin_right = 189.0
margin_bottom = 266.0
text = "15:25 ~ 16:10"

[node name="6" type="CheckBox" parent="定时/TimingList"]
margin_top = 270.0
margin_right = 189.0
margin_bottom = 311.0
text = "16:20 ~ 17:05"

[node name="7" type="CheckBox" parent="定时/TimingList"]
margin_top = 315.0
margin_right = 189.0
margin_bottom = 356.0
text = "17:05 ~ 18:05"

[node name="8" type="CheckBox" parent="定时/TimingList"]
margin_top = 360.0
margin_right = 189.0
margin_bottom = 401.0
text = "15:25 ~ 16:10"

[node name="9" type="CheckBox" parent="定时/TimingList"]
margin_top = 405.0
margin_right = 189.0
margin_bottom = 446.0
text = "16:20 ~ 17:05"

[node name="10" type="CheckBox" parent="定时/TimingList"]
margin_top = 450.0
margin_right = 189.0
margin_bottom = 491.0
text = "17:05 ~ 18:05"

[node name="ScrollContainer" type="ScrollContainer" parent="定时"]
margin_left = 500.0
margin_top = 119.0
margin_right = 855.0
margin_bottom = 436.0

[node name="ClassList" type="VBoxContainer" parent="定时/ScrollContainer"]

[node name="Link" type="Button" parent="定时"]
margin_left = 876.0
margin_top = 187.0
margin_right = 994.0
margin_bottom = 243.0
text = "绑定"

[node name="StartReservationPage" type="Button" parent="定时"]
margin_left = 860.0
margin_top = 370.0
margin_right = 1016.0
margin_bottom = 425.0
text = "管理绑定关系"

[node name="SeasonSelect" type="OptionButton" parent="定时"]
margin_left = 311.0
margin_top = 48.0
margin_right = 436.0
margin_bottom = 100.0
text = "春季"
items = [ "春季", null, false, 0, null, "夏季", null, false, 1, null, "秋季", null, false, 2, null, "冬季", null, false, 3, null ]
selected = 0

[node name="ReservationPage" type="WindowDialog" parent="定时"]
margin_left = 127.0
margin_top = 89.0
margin_right = 839.0
margin_bottom = 552.0
popup_exclusive = true

[node name="ScrollContainer" type="ScrollContainer" parent="定时/ReservationPage"]
margin_right = 616.0
margin_bottom = 458.0

[node name="ReservationList" type="VBoxContainer" parent="定时/ReservationPage/ScrollContainer"]

[node name="SelectAllReservation" type="Button" parent="定时/ReservationPage"]
margin_left = 635.0
margin_top = 12.0
margin_right = 695.0
margin_bottom = 51.0
text = "全选"

[node name="InvertSelectedReservation" type="Button" parent="定时/ReservationPage"]
margin_left = 634.0
margin_top = 136.0
margin_right = 694.0
margin_bottom = 175.0
text = "反选"

[node name="DeleteSelectedReservation" type="Button" parent="定时/ReservationPage"]
margin_left = 634.0
margin_top = 276.0
margin_right = 694.0
margin_bottom = 315.0
text = "删除"

[node name="CancelReservationPage" type="Button" parent="定时/ReservationPage"]
margin_left = 638.0
margin_top = 399.0
margin_right = 698.0
margin_bottom = 438.0
text = "关闭"

[node name="Roll" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="GridContainer" parent="Roll"]
margin_left = 55.0
margin_top = 66.0
margin_right = 821.0
margin_bottom = 568.0

[node name="Start" type="Button" parent="Roll"]
margin_left = 881.0
margin_top = 32.0
margin_right = 1010.0
margin_bottom = 106.0
rect_scale = Vector2( 1.00179, 1.00584 )
text = "Start"

[node name="Stop" type="Button" parent="Roll"]
margin_left = 879.0
margin_top = 232.0
margin_right = 1008.0
margin_bottom = 306.0
text = "Stop"

[node name="Auto" type="Button" parent="Roll"]
margin_left = 884.0
margin_top = 444.0
margin_right = 1013.0
margin_bottom = 518.0
text = "Auto"

[node name="SetRollClass" type="OptionButton" parent="Roll"]
margin_left = 234.0
margin_top = 5.0
margin_right = 502.0
margin_bottom = 57.0
align = 1

[node name="说明" type="Control" parent="."]
visible = false
margin_right = 14.0
margin_bottom = 14.0

[node name="RichTextLabel" type="RichTextLabel" parent="说明"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 836.0
margin_bottom = 477.0

[node name="WarningPage" type="AcceptDialog" parent="."]
margin_left = 91.0
margin_top = 204.0
margin_right = 491.0
margin_bottom = 344.0
popup_exclusive = true
window_title = "警告！"

[connection signal="pressed" from="设置班级/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="设置班级/StartClassPage" to="." method="_on_StartClassPage_pressed"]
[connection signal="add" from="设置班级/AdminClassPage" to="." method="_on_Import_pressed"]
[connection signal="delete" from="设置班级/AdminClassPage" to="." method="_on_AdminClassPage_delete"]
[connection signal="more_setting" from="设置班级/AdminClassPage" to="." method="_on_AdminClassPage_more_setting"]
[connection signal="file_selected" from="设置班级/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="设置班级/GetClassName" to="." method="_on_GetClassName_confirmed"]
[connection signal="pressed" from="定时/Link" to="." method="_on_Link_pressed"]
[connection signal="pressed" from="定时/StartReservationPage" to="." method="_on_StartReservationPage_pressed"]
[connection signal="item_selected" from="定时/SeasonSelect" to="." method="_on_SeasonSelect_item_selected"]
[connection signal="pressed" from="定时/ReservationPage/SelectAllReservation" to="." method="_on_SelectAllReservation_pressed"]
[connection signal="pressed" from="定时/ReservationPage/InvertSelectedReservation" to="." method="_on_InvertSelectedReservation_pressed"]
[connection signal="pressed" from="定时/ReservationPage/DeleteSelectedReservation" to="." method="_on_DeleteSelectedReservation_pressed"]
[connection signal="pressed" from="定时/ReservationPage/CancelReservationPage" to="." method="_on_CancelReservationPage_pressed"]
[connection signal="pressed" from="Roll/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Roll/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Roll/Auto" to="." method="_on_Auto_pressed"]
[connection signal="item_selected" from="Roll/SetRollClass" to="." method="_on_SetRollClass_item_selected"]
